# tp-programacion-concurrente

./: README.md
ecommerce/: Cargo.toml  pedidos.csv  stores.csv
ecommerce/src/: file_reader.rs  main.rs  messages.rs  product.rs  read_stores.rs  shared_state.rs  store_connection.rs
stores/: Cargo.toml  pedidos_1.csv  pedidos_2.csv
stores/src/: main.rs  messages.rs  orders_processor.rs  product.rs  store.rs  store_server.rs
