[package]
name = "stores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
csv = "1.1"
log = "0.4.17"
rand = "0.8.5"
async-std = "1.9.0"
tokio = {version = "1.34", features = ["full"]}
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"]}